------------------------------------------------------------------------
0.14 | Piotr Roszatycki <dexter@debian.org> | 2008-04-11

Changes:

* Always dumps full trace stack. The ignore_package and ignore_level has
  meaning only for first line of the error message.
* Updated bundled Test::Unit::Lite to 0.0901.

------------------------------------------------------------------------
0.13 | Piotr Roszatycki <dexter@debian.org> | 2007-11-19

Changes:

* If the error stack is empty, the catch method returns undefined value.
* Updated bundled Test::Unit::Lite to 0.0701.

------------------------------------------------------------------------
0.12 | Piotr Roszatycki <dexter@debian.org> | 2007-10-29

Fixes:

* ignore_level has meaning only for non-skipped levels.
* Changed $SIG{__DIE__} does not interfere with evals used internally.

Changes:

* ignore_level and ignore_package does not change caller_info. This attributes
  have meaning only for stringify output. 
* package, file, line, subroutine are now methods, not attributes anymore.
* The attributes does not override base class methods if are existing.
* Minor refactoring.
* Updated bundled Test::Unit::Lite to 0.07.

------------------------------------------------------------------------
0.11 | Piotr Roszatycki <dexter@debian.org> | 2007-10-13

New:

* New field eval_error contains pure eval's error.

Changes:

* Die if can't load existing module.
* Updated bundled Test::Unit::Lite to 0.0601.
* Compatibility with Kurila 1.4.

------------------------------------------------------------------------
0.10 | Piotr Roszatycki <dexter@debian.org> | 2007-10-09

Changes:

* Throw new exception if first parameter for Exception::Base->throw($e,
  @args) is not an Exception::Base object.  It gives the syntax for
  rethrowing the simple eval's error.
* Skip derived from Exception::Base on stack dump output.  It is useful if
  the derived class overwrites throw() method.