@@ -1,10 +1,16 @@
 ------------------------------------------------------------------------
 0.14 | Piotr Roszatycki <dexter@debian.org> | 2008-04-11
 
+New:
+
+* New verbosity level 4. Always dumps full trace stack. The ignore_package and
+  ignore_level has meaning only for first line of the error message.
+* New field ignore_class which filters stack trace.
+* New syntax for import. The default values (verbosity, message, ignore_*,
+  ...) can be replaced or changed based on previous value.
+
 Changes:
 
-* Always dumps full trace stack. The ignore_package and ignore_level has
-  meaning only for first line of the error message.
 * Updated bundled Test::Unit::Lite to 0.0901.
 
 ------------------------------------------------------------------------
